src/sass/static/pages.scss
/* ... */
#content.careers-content {
    margin-top: 0;

    .career {
        .top-banner {
            background: url('../images/pages/careers/careers-1_bg.jpg') no-repeat;
            background-size: cover;
            min-height: 300px;
            position: relative;
            background-position: center;

            .banner-caption {
                position: absolute;
                z-index: 1;
                width: 100%;
                bottom: -100px;

                .caption-text {
                    margin: 0 auto;
                    max-width: 960px;
                    background-color: $COLOR_WHITE;
                    text-align: center;
                    padding: 40px 0px 20px;

                    p {
                        margin: 1em auto;
                        max-width: 80%;
                    }
                }
            }
            @media (max-width: 768px) {
                background-position: 75% -30px;
            }
        }
        .center-banner {
            background: url('../images/pages/careers/careers-2_bg.jpg') no-repeat;
            background-size: cover;
            min-height: 300px;
            display: flex;
            align-items: center;
            justify-content: center;
            background-position: center;

            .caption-text {
                margin: 0 auto;
                max-width: 960px;
                text-align: center;

                h1 {
                    margin-top: 1em;
                }
                p {
                    color: $COLOR_WHITE;
                    margin: 1em auto;
                    max-width: 80%;
                    font-weight: 300;
                }
            }
        }
        .center-element {
            margin: 0 auto;
        }
        .margin-top-100 {
            margin-top: 100px;
        }
        .btn-margin-top {
            margin-top: 1.5em;
        }
        .column-margin {
            margin: 0 0 1em;
        }
        .header-line {
            border-color: $COLOR_ORANGE;
            border-width: 3px;
            width: 25%;
        }
        .fill-text {
            padding: 1em 0;
        }
        .values-box {
            border: 2px solid $COLOR_ORANGE;
            margin: 0 4px;

            &-icon {
                max-width: 60px;
                padding: 8px 36px 0px;
                margin-top: -36px;
                background: $COLOR_WHITE;
            }
            &-subheader {
                font-size: $FONT_SIZE_L;
                font-weight: normal;
                text-transform: capitalize;
            }
            @media (max-width: 768px) {
                margin-bottom: 2.5rem;
            }
        }
        h4 {
            color: $COLOR_BLUE;
        }
        ul.role-section {
            display: flex;
            align-items: center;
            justify-content: center;
            margin-bottom: 20px;
            border-bottom: 0;

            li.role {
                margin: 0;
                border-radius: 0;
                padding: 0;

                a.role-btn {
                    padding: 15px 20px !important;

                    span {
                        color: $COLOR_BLUE;
                        font-weight: 600;
                        font-size: $FONT_SIZE_L;
                        text-transform: none;
                        @media (max-width: 320px) {
                            font-size: $FONT_SIZE_S;
                        }
                    }
                    &:focus {
                        border: 0;
                        outline: 0;
                    }
                }
                &.ui-tabs-active a span {
                    color: $COLOR_WHITE;
                }
                &:focus {
                    border: 0;
                    outline: 0;
                }
            }
        }
        .footer-email {
            margin-bottom: -20px;

            p {
                color: $COLOR_WHITE;
                padding: 20px 0;
                text-align: center;
            }
        }
        .location-section {
            padding-bottom: 10px;

            @media (max-width: 480px) {
                padding-bottom: 0;

                .fill-text {
                    margin-bottom: 30px;
                }
            }
        }
        .values-group {
            margin-bottom: 20px;

            h1 {
                margin-bottom: 30px;
            }
        }
    }
}
/* ... */

